...
        children: [
          // EMAIL //
          SizedBox(
            width: 350,
            height: 60,
            child: TextFormField(
              key: const ValueKey('emailSignUpField'),
              controller: _email,
              focusNode: widget.emailFocusNode,
              validator: (value) => StringValidation.validateEmail(
                email: value,
              ),
              textInputAction: TextInputAction.next,
...
          const SizedBox(height: 4),
          // PASSWORD //
          SizedBox(
            width: 350,
            height: 60,
            child: TextFormField(
              key: const ValueKey('passwordSignUpField'),
              controller: _password,
              focusNode: widget.passwordFocusNode,
              obscureText: passwordVisible,
              validator: (value) => StringValidation.validatePassword(
                password: value,
              ),
...
                )
              : Padding(
                  padding: const EdgeInsets.only(left: 0.0, right: 0.0),
                  child: SizedBox(
                    width: 350, // match_parent
                    child: ElevatedButton.icon(
                      key: const ValueKey('Log In Button'),
                      onPressed: () async {
                        widget.emailFocusNode.unfocus();
                        widget.passwordFocusNode.unfocus();

                        setState(() {
                          _isSigningIn = true;
...
