...
              ),
              const SizedBox(height: 20),
              const Text("Verify your Email address to continue!",
                  style:
                  TextStyle(fontSize: 38, fontWeight: FontWeight.bold)),
              const SizedBox(height: 10),
              const Text("A verification email has been sent to your email.",
                  style:
                  TextStyle(fontSize: 20, fontWeight: FontWeight.normal)),
              const SizedBox(height: 20),
              //If it is in the process of verifying, the button will be loading else it is just a button.
              isVerifying
                  ? const Padding(
...
